@@ -1,3 +1,3 @@
 requests>=2.22.0,<3
-responses==0.10.16
-pytest==6.0.1
+responses==0.13.2
+pytest==6.1.2
