@@ -1,3 +1,8 @@
+Not released
+------
+- Add family search
+
+
 1.4
 ------
 - Add support for strings api calls
